--- a/starwars-game/package.json
+++ b/starwars-game/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:api": "pm2 restart ../api/long-api/game-api/bin/www",
+    "start:api": "pm2 start ../api/long-api/game-api/bin/www",
     "prestart": "npm run start:api",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "new-workspace": "ng new mon-workspace --create-application=false",
+    "ng-app": "ng g app mon-app",
+    "ng-lib": "ng g lib ma-lib"
   },
   "private": true,
   "dependencies": {
